--- a/index.html
+++ b/index.html
@@ -6,15 +6,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="site.css" />
-    <title>Straming-Videos</title>
+    <title>Streaming-Videos</title>
 </head>
 
 <body>
     <header>
-        <h1>Straming-Videos</h1>
+        <h1>Streaming-Videos</h1>
     </header>
     <main>
-        
+        <nav>
+            <ul>
+                <li><a href="#">Em Alta</a></li>
+                <li><a href="#">Filmes</a></li>
+                <li><a href="#">Séries</a></li>
+                <li><a href="#">Novidades</a></li>
+                <li><a href="#">Minha Biblioteca</a></li>
+            </ul>
+        </nav> 
     </main>
     <footer>
         <p>Copyright &copy; 2020 - by <a href="#">Straming-Videos</a></p>
