--- a/index.html
+++ b/index.html
@@ -22,7 +22,29 @@
                 <li><a href="#">Novidades</a></li>
                 <li><a href="#">Minha Biblioteca</a></li>
             </ul>
-        </nav> 
+        </nav>
+        <aside>
+            <h2>Categorias</h2>
+            <ul>
+                <li><a href="#">Ação</a></li>
+                <li><a href="#">Animação</a></li>
+                <li><a href="#">Aventura</a></li>
+                <li><a href="#">Comédia</a></li>
+                <li><a href="#">Documentário</a></li>
+                <li><a href="#">Drama</a></li>
+                <li><a href="#">Família</a></li>
+                <li><a href="#">Fantasia</a></li>
+                <li><a href="#">Ficção Científica</a></li>
+                <li><a href="#">Guerra</a></li>
+                <li><a href="#">História</a></li>
+                <li><a href="#">Mistério</a></li>
+                <li><a href="#">Musical</a></li>
+                <li><a href="#">Policial</a></li>
+                <li><a href="#">Romance</a></li>
+                <li><a href="#">Suspense</a></li>
+                <li><a href="#">Terror</a></li>
+            </ul>
+        </aside>
     </main>
     <footer>
         <p>Copyright &copy; 2020 - by <a href="#">Straming-Videos</a></p>
