section: Em Alta

--- a/index.html
+++ b/index.html
@@ -45,6 +45,45 @@
                 <li><a href="#">Terror</a></li>
             </ul>
         </aside>
+        <section>
+            <h2>Em Alta</h2>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+            <article>
+                <img src="img/filmedefault.jpeg" alt="">
+                <h3>Titulo do video</h3>
+            </article>
+        </section>
     </main>
     <footer>
         <p>Copyright &copy; 2020 - by <a href="#">Straming-Videos</a></p>
