Alterando titulo dos filmes

--- a/index.html
+++ b/index.html
@@ -49,39 +49,39 @@
             <h2>Em Alta</h2>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>Um Lanche Legal</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>Com Grandes Poderes</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>X-Batalha</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>Legado</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>O Queijo</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>Run!</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>Um Dia Em Marte</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>Tarantula!</h3>
             </article>
             <article>
                 <img src="img/filmedefault.jpeg" alt="">
-                <h3>Titulo do video</h3>
+                <h3>One</h3>
             </article>
         </section> 
     </main>
