--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <header>
         <h1>Streaming-Videos</h1>
     </header>
-    <nav>
+    <nav id="menu-nav">
         <ul>
-            <li><a href="#">Em Alta</a></li>
-            <li><a href="#">Filmes</a></li>
-            <li><a href="#">Séries</a></li>
-            <li><a href="#">Novidades</a></li>
-            <li><a href="#">Minha Biblioteca</a></li>
+            <li class="menu-li"><a class="menu-a" href="#">Em Alta</a></li>
+            <li class="menu-li"><a class="menu-a" href="#">Filmes</a></li>
+            <li class="menu-li"><a class="menu-a" href="#">Séries</a></li>
+            <li class="menu-li"><a class="menu-a" href="#">Novidades</a></li>
+            <li class="menu-li"><a class="menu-a" href="#">Minha Biblioteca</a></li>
         </ul>
     </nav>
     <main>
