FlexBox em main

--- a/index.html
+++ b/index.html
@@ -23,66 +23,68 @@
         </ul>
     </nav>
     <main>
-        <aside>
+        <aside id="menu-aside">
             <h2>Categorias</h2>
             <ul>
-                <li><a href="#">Ação</a></li>
-                <li><a href="#">Animação</a></li>
-                <li><a href="#">Aventura</a></li>
-                <li><a href="#">Comédia</a></li>
-                <li><a href="#">Documentário</a></li>
-                <li><a href="#">Drama</a></li>
-                <li><a href="#">Família</a></li>
-                <li><a href="#">Fantasia</a></li>
-                <li><a href="#">Ficção Científica</a></li>
-                <li><a href="#">Guerra</a></li>
-                <li><a href="#">História</a></li>
-                <li><a href="#">Mistério</a></li>
-                <li><a href="#">Musical</a></li>
-                <li><a href="#">Policial</a></li>
-                <li><a href="#">Romance</a></li>
-                <li><a href="#">Suspense</a></li>
-                <li><a href="#">Terror</a></li>
+                <li class="aside-li"><a href="#">Ação</a></li>
+                <li class="aside-li"><a href="#">Animação</a></li>
+                <li class="aside-li"><a href="#">Aventura</a></li>
+                <li class="aside-li"><a href="#">Comédia</a></li>
+                <li class="aside-li"><a href="#">Documentário</a></li>
+                <li class="aside-li"><a href="#">Drama</a></li>
+                <li class="aside-li"><a href="#">Família</a></li>
+                <li class="aside-li"><a href="#">Fantasia</a></li>
+                <li class="aside-li"><a href="#">Ficção Científica</a></li>
+                <li class="aside-li"><a href="#">Guerra</a></li>
+                <li class="aside-li"><a href="#">História</a></li>
+                <li class="aside-li"><a href="#">Mistério</a></li>
+                <li class="aside-li"><a href="#">Musical</a></li>
+                <li class="aside-li"><a href="#">Policial</a></li>
+                <li class="aside-li"><a href="#">Romance</a></li>
+                <li class="aside-li"><a href="#">Suspense</a></li>
+                <li class="aside-li"><a href="#">Terror</a></li>
             </ul>
         </aside>
-        <section>
+        <section id="section-em-alta">
             <h2>Em Alta</h2>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>Um Lanche Legal</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>Com Grandes Poderes</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>X-Batalha</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>Legado</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>O Queijo</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>Run!</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>Um Dia Em Marte</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>Tarantula!</h3>
-            </article>
-            <article>
-                <img src="img/filmedefault.jpeg" alt="">
-                <h3>One</h3>
-            </article>
+            <div>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>Um Lanche Legal</h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>Com Grandes Poderes </h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>X-Batalha</h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>Legado</h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>O Queijo</h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>Run!</h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>Um Dia Em Marte</h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>Tarantula!</h3>
+                </article>
+                <article class="article-cartaz">
+                    <img src="img/filmedefault.jpeg" alt="">
+                    <h3>One</h3>
+                </article>
+            </div>
         </section> 
     </main>
     <footer>
