Tirando aside de main

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <li class="menu-li"><a class="menu-a" href="#">Minha Biblioteca</a></li>
         </ul>
     </nav>
-    <main>
+    <div id="body-wrapper">
         <aside id="menu-aside">
             <h2>Categorias</h2>
             <ul>
@@ -45,48 +45,50 @@
                 <li class="aside-li"><a href="#">Terror</a></li>
             </ul>
         </aside>
-        <section id="section-em-alta">
-            <h2>Em Alta</h2>
-            <div>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>Um Lanche Legal</h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>Com Grandes Poderes </h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>X-Batalha</h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>Legado</h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>O Queijo</h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>Run!</h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>Um Dia Em Marte</h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>Tarantula!</h3>
-                </article>
-                <article class="article-cartaz">
-                    <img src="img/filmedefault.jpeg" alt="">
-                    <h3>One</h3>
-                </article>
-            </div>
-        </section> 
-    </main>
+        <main>
+            <section id="section-em-alta">
+                <h2>Em Alta</h2>
+                <div>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>Um Lanche Legal</h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>Com Grandes Poderes </h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>X-Batalha</h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>Legado</h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>O Queijo</h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>Run!</h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>Um Dia Em Marte</h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>Tarantula!</h3>
+                    </article>
+                    <article class="article-cartaz">
+                        <img src="img/filmedefault.jpeg" alt="">
+                        <h3>One</h3>
+                    </article>
+                </div>
+            </section> 
+        </main>
+    </div>
     <footer>
         <p>Copyright &copy; 2020 - by <a href="#">Straming-Videos</a></p>
     </footer>
