Estilização do menu lateral

--- a/index.html
+++ b/index.html
@@ -26,23 +26,23 @@
         <aside id="menu-aside">
             <h2>Categorias</h2>
             <ul>
-                <li class="aside-li"><a href="#">Ação</a></li>
-                <li class="aside-li"><a href="#">Animação</a></li>
-                <li class="aside-li"><a href="#">Aventura</a></li>
-                <li class="aside-li"><a href="#">Comédia</a></li>
-                <li class="aside-li"><a href="#">Documentário</a></li>
-                <li class="aside-li"><a href="#">Drama</a></li>
-                <li class="aside-li"><a href="#">Família</a></li>
-                <li class="aside-li"><a href="#">Fantasia</a></li>
-                <li class="aside-li"><a href="#">Ficção Científica</a></li>
-                <li class="aside-li"><a href="#">Guerra</a></li>
-                <li class="aside-li"><a href="#">História</a></li>
-                <li class="aside-li"><a href="#">Mistério</a></li>
-                <li class="aside-li"><a href="#">Musical</a></li>
-                <li class="aside-li"><a href="#">Policial</a></li>
-                <li class="aside-li"><a href="#">Romance</a></li>
-                <li class="aside-li"><a href="#">Suspense</a></li>
-                <li class="aside-li"><a href="#">Terror</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Ação</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Animação</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Aventura</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Comédia</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Documentário</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Drama</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Família</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Fantasia</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Ficção Científica</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Guerra</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">História</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Mistério</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Musical</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Policial</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Romance</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Suspense</a></li>
+                <li class="aside-li"><a href="#" class="aside-a">Terror</a></li>
             </ul>
         </aside>
         <main>
